# RISCV-Simulator

./: AgreeGAp.xlsx  AgreeSAp.xlsx  CMakeLists.txt  GAp.xlsx  MAs.xlsx  PAp.xlsx  PAs.xlsx  README.md  TAGE.xlsx  bpu_tests.py  bpu_tests.sh  build-riscv-elfs.sh
bpu_tests/: aliasing_test.c  compile.sh  cycles_test.c  empty_test.c  func_test.c  ifs_test.c  index_of_test.c  long_loops_test.cpp  math_tests.c  matrix_mul_test.c  quick_sort_test.c  random_test.c_s  str_test.c
riscv-elf/: helloworld.riscv  test_branch.riscv
src/: BranchPredictor.h  MainCPU.cpp  Simulator.cpp  Simulator.h
src/bpus/: AgreeGAp.cpp  AgreeGAp.h  AgreeSAp.cpp  AgreeSAp.h  GAp.cpp  GAp.h  MAs.cpp  MAs.h  PAp.cpp  PAp.h  PAs.cpp  PAs.h  TAGE.cpp  TAGE.h
